feat: handler にwc追加
